fixed LightHouse errors

--- a/index.html
+++ b/index.html
@@ -152,12 +152,9 @@
             <div class="col-md-6 col-sm-12">
                 <div class="home-info">
 
-
-                    <h1>
-                        <a href="" class="typewrite" data-period="200" data-type='[ "Hi, I&#39;m Bolaji Ayodeji.", "I&#39;m a Tech Geek", "I&#39;m a Front-end Developer", "I write code", "I Love contributing to Open Sourced Projects", "I Love to Design", "I&#39;m passionate about developing and designing brilliant innovative products", "Welcome to my portfolio", "Enjoy!"]'>
+                        <h1 class="typewrite" data-period="200" data-type='[ "Hi, I&#39;m Bolaji Ayodeji.", "I&#39;m a Tech Geek", "I&#39;m a Front-end Developer", "I write code", "I Love contributing to Open Sourced Projects", "I Love to Design", "I&#39;m passionate about developing and designing brilliant innovative products", "Welcome to my portfolio", "Enjoy!"]'>
                             <span class="wrap"></span>
-                        </a>
-                    </h1>
+                        </h1>
 
                     <a href="#about" style="color:#000"; class="btn section-btn smoothScroll hvr-icon-down">Get Started <i class="fa fa-chevron-circle-down hvr-icon"></i></a>
                     <span>
@@ -185,15 +182,15 @@
                             <h2>Quick Bio</h2>
                             <span class="line-bar">...</span>
                         </div>
-                        <p>Hello there! I'm Bolaji Ayodeji. <br /> OpenSource Advocate 🔥🚀 <br /> Chief Tech Support @<a target=_blank " href="https://youthsundefined.org ">Youths Undefined</a><br />
-                            Web Developer Intern @<a target=_blank" href="https://upnepa.ng">Upnepa Ng</a><br /> Campus Ambassador @<a target="_blank" href="https://ingressive.co">Ingressive</a> @
-                            <a target=_blank " href="https://favcode54.org ">Favcode54</a> <br />
+                        <p>Hello there! I'm Bolaji Ayodeji. <br /> OpenSource Advocate 🔥🚀 <br /> Chief Tech Support @<a target="_blank" href="https://youthsundefined.org" rel="noopener">Youths Undefined</a><br />
+                            Web Developer Intern @<a target="_blank" href="https://upnepa.ng" rel="noopener">Upnepa Ng</a><br /> Campus Ambassador @<a target="_blank" href="https://ingressive.co" rel="noopener">Ingressive</a> @
+                            <a target="_blank" href="https://favcode54.org ">Favcode54</a> <br />
                             Campus Organizer @<a target="_blank " href="https://forloop.africa ">forLoop</a></p>
                         <p>I build and deploy softwares with great focus on stunning user interface, design,
                             optimization and security. 💡</p>
                         <p>I'm passionate about developing and designing brilliant innovative products. 💡</p><br />
 
-                        <a class="section-btn hvr-icon-forward " href="assets/resume.pdf ">View Resume <i class="fa fa-arrow-right hvr-icon "></i></a>
+                        <a class="section-btn hvr-icon-forward" href="assets/resume.pdf ">View Resume <i class="fa fa-arrow-right hvr-icon "></i></a>
 
 
                     </div>
@@ -202,33 +199,17 @@
                 <div class="col-md-3 col-sm-6 ">
                     <div class="about-info skill-thumb ">
 
-                        <strong>Web Design</strong>
-                        <span class="pull-right "><i class="ni ni-tv-2 "></i></span>
-                        <div class="progress ">
-                            <div class="progress-bar progress-bar-primary " role="progressbar " aria-valuemin="0 "
-                                aria-valuemax="100 " style="width: 55%; "></div>
-                        </div>
+                        <h4>Web Design <span class="pull-right"><i class="ni ni-tv-2"></i></span></h4>
+                        <hr>
 
-                        <strong>Photography</strong>
-                        <span class="pull-right "><i class="ni ni-camera-compact "></i></span>
-                        <div class="progress ">
-                            <div class="progress-bar progress-bar-primary " role="progressbar " aria-valuemin="0 "
-                                aria-valuemax="100 " style="width: 55%; "></div>
-                        </div>
+                        <h4>Photography <span class="pull-right"><i class="ni ni-camera-compact"></i></span></h4>
+                        <hr>
 
-                        <strong>Digital Marketing</strong>
-                        <span class="pull-right "><i class="ni ni-spaceship "></i>></span>
-                        <div class="progress ">
-                            <div class="progress-bar progress-bar-primary " role="progressbar " aria-valuemin="0 "
-                                aria-valuemax="100 " style="width: 55%; "></div>
-                        </div>
+                        <h4>Digital Marketing <span class="pull-right"><i class="ni ni-spaceship"></i></span></h4>
+                        <hr>
 
-                        <strong>Content Management</strong>
-                        <span class="pull-right "><i class="ni ni-single-copy-04 "></i>></span>
-                        <div class="progress ">
-                            <div class="progress-bar progress-bar-primary " role="progressbar " aria-valuemin="0 "
-                                aria-valuemax="100 " style="width: 55%; "></div>
-                        </div>
+                        <h4>Content Management <span class="pull-right"><i class="ni ni-single-copy-04"></i></span></h4>
+                        <hr>
 
                     </div>
                 </div>
@@ -453,7 +434,7 @@
                     <div class="row ">
                         <div style="text-align: center; " class="col-lg-12 ">
                             <h2>
-                                <a href="https://medium.com/@bolajiayodeji " class="link-btn hvr-float "> Read all my articles&nbsp; <i class="fa fa-arrow-right "></i></a>
+                                <a href="https://medium.com/@bolajiayodeji" rel="noopener" class="link-btn hvr-icon-forward" rel="noopener"> Read all my articles&nbsp; <i class="fa fa-arrow-right hvr-icon"></i></a>
                             </h2>
                         </div>
                     </div>
@@ -482,7 +463,7 @@
                 <div class="col-md-3 col-sm-6">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
-                        <a href="https://chrome.google.com/webstore/detail/inspirenuggets-for-chrome/acnfgdioohhajabdofaadfdhmlkphmlb" target="_blank" class="">
+                        <a href="https://chrome.google.com/webstore/detail/inspirenuggets-for-chrome/acnfgdioohhajabdofaadfdhmlkphmlb" target="_blank" rel="noopener">
                             <img src="images/work/work-image4.png" class="img-responsive" alt="Work">
 
                             <div class="work-info">
@@ -496,7 +477,7 @@
                 <div class="col-md-3 col-sm-6 ">
                     <!-- WORK THUMB -->
                     <div class="work-thumb ">
-                        <a href="https://netty-finder.herokuapp.com " target="_blank " class=" ">
+                        <a href="https://netty-finder.herokuapp.com " target="_blank" rel="noopener">
                             <img src="images/work/work-image1.png " class="img-responsive " alt="Work ">
 
                             <div class="work-info ">
@@ -511,7 +492,7 @@
                 <div class="col-md-3 col-sm-6 ">
                     <!-- WORK THUMB -->
                     <div class="work-thumb ">
-                        <a href="https://emperorphotoshop.com " target=_blank" class="">
+                        <a href="https://emperorphotoshop.com" target="_blank" rel="noopener">
                                 <img src="images/work/work-image2.png" class="img-responsive" alt="Work">
 
                                 <div class="work-info">
@@ -525,7 +506,7 @@
                 <div class="col-md-3 col-sm-6">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
-                        <a href="https://inside-ful.com.ng" target="_blank" class="">
+                        <a href="https://inside-ful.com.ng" target="_blank" rel="noopener">
                             <img src="images/work/work-image3.png" class="img-responsive" alt="Work">
 
                             <div class="work-info">
@@ -540,7 +521,7 @@
                         <div style="text-align: center;" class="col-lg-12"> 
                             </h2>
                             <h2>
-                                <a href="https://github.com/BolajiAyodeji?tab=repositories" class="link-btn hvr-float">View my other projects on GitHub&nbsp; <i class="fa fa-arrow-right"></i></a>
+                                <a href="https://github.com/BolajiAyodeji?tab=repositories" rel="noopener" class="link-btn hvr-icon-forward" rel="noopener">View my other projects on GitHub&nbsp; <i class="fa fa-arrow-right hvr-icon"></i></a>
                             </h2>
                         </div>
                     </div>
@@ -583,14 +564,14 @@
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, veritatis nulla eum laudantium totam tempore optio doloremque laboriosam quas, quos eaque molestias odio aut eius animi. Impedit temporibus nisi
                                                 accusamus.
                                             </p>
-                                            <h3>Seun Daramola | <span class="testi">Software Developer</span> <a href="https://andela.com" target="_blank">@Andela</a></h3>
+                                            <h3>Seun Daramola | <span class="testi">Software Developer</span> <a href="https://andela.com" target="_blank" rel="noopener">@Andela</a></h3>
                                         </blockquote>
                                     </div>
                                     <div class="item">
                                         <img class="profile-circle" src="images/testi/johnicks.jpg" alt="Johnicks">
                                         <blockquote>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, veritatis nulla eum laudantium totam tempore optio doloremque laboriosam quas, quos eaque molestias odio aut eius animi.</p>
-                                            <h3>Johnicks | <span class="testi">CEO</span> <a href="https://www.facebook.com/johnicks.studiovilla" target="_blank">@Johnicks StudioVilla</a></h3>
+                                            <h3>Johnicks | <span class="testi">CEO</span> <a href="https://www.facebook.com/johnicks.studiovilla" target="_blank" rel="noopener">@Johnicks StudioVilla</a></h3>
                                         </blockquote>
                                     </div>
                                     <div class="active item">
@@ -599,7 +580,7 @@
                                             <p>Bolaji is a dedicated developer, always eager to find and fix problems.
                                                 <br /> He is one of the most active contributors to Open Source Community Africa, a project that promotes the use of open source project in Africa. <br /> I find it easy working with him and I will highly
                                                 recommend him on his expertise. </p>
-                                            <h3>Samson Goddy | <span class="testi">Co-Founder</span> <a href="https://oscafrica.org" target="_blank">@OSCA</a></h3>
+                                            <h3>Samson Goddy | <span class="testi">Co-Founder</span> <a href="https://oscafrica.org" target="_blank" rel="noopener">@OSCA</a></h3>
                                         </blockquote>
                                     </div>
                                     <div class="item">
@@ -608,21 +589,21 @@
                                             <p>I've known Bolaji for some years now, He's not only concerned about building the technical aspect of your product, but also helping you scale up your business, this is some great quality most developers out
                                                 there lack. You should try him out, He's an exponent Front-end Developer
                                             </p>
-                                            <h3>Ibrahim Olamilekan | <span class="testi">Mobile Developer</span> <a href="https://dotimely.com" target="_blank">@DoTimely</a></h3>
+                                            <h3>Ibrahim Olamilekan | <span class="testi">Mobile Developer</span> <a href="https://dotimely.com" target="_blank" rel="noopener">@DoTimely</a></h3>
                                         </blockquote>
                                     </div>
                                     <div class="item">
                                         <img class="profile-circle" src="images/testi/damian.jpg" alt="Damian">
                                         <blockquote>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, veritatis nulla eum laudantium totam tempore optio doloremque laboriosam quas, quos eaque molestias odio aut eius animi.</p>
-                                            <h3>Damian Ashinjo | <span class="testi">CEO</span> <a href="https://youthsundefined.org" target="_blank">@YouthsUndefined</a></h3>
+                                            <h3>Damian Ashinjo | <span class="testi">CEO</span> <a href="https://youthsundefined.org" target="_blank" rel="noopener">@YouthsUndefined</a></h3>
                                         </blockquote>
                                     </div>
                                     <div class="item">
                                         <img class="profile-circle" src="images/testi/sharon.jpg" alt="Sharon">
                                         <blockquote>
                                             <p>Bolaji is a determined young man and I completely trust his expertise on building software's, developing and designing brilliant innovations. <br /> He responds quickly to problems and prefers long lasting solutions.</p>
-                                            <h3>Sharon Ngunan | <span class="testi">CEO</span> <a href="https://www.facebook.com/Fairy-Dust-Studio-1980424062254614/" target="_blank">@FairyDust Studio</a></h3>
+                                            <h3>Sharon Ngunan | <span class="testi">CEO</span> <a href="https://www.facebook.com/Fairy-Dust-Studio-1980424062254614/" target="_blank" rel="noopener">@FairyDust Studio</a></h3>
                                         </blockquote>
                                     </div>
                                 </div>
@@ -653,6 +634,7 @@
                     <form id="contact-form" action="https://formspree.io/mailtobolaji@gmail.com" method="POST">
                         <input type="hidden" name="_subject" value="Message to Bolaji Ayodeji" />
                         <div class="col-md-12 col-sm-12">
+                            <label>Full Name</label>
                             <input type="text" name="name" class="form-control" placeholder="Full Name" id="cf-name" required="required">
                         </div>
 
@@ -769,14 +751,14 @@
                             <li><a href="#articles" class="smoothScroll">Recent Articles</a></li>
                             <li><a href="#portfolio" class="smoothScroll">Recent Projects</a></li>
                             <li><a href="#contact" class="smoothScroll">Contact</a></li>
-                            <li><a href="https://medium.com/bolajiayodeji" class="smoothScroll">Blog</a></li>
+                            <li><a href="https://medium.com/bolajiayodeji" rel="noopener" class="smoothScroll">Blog</a></li>
                         </ul>
                     </div>
                 </div>
 
                 <div class="col-md-3 col-sm-4">
                     <div class="footer-thumb">
-                        <a href="https://certification.templatemonster.com" target="_blank"><img src="images/certified.png" class="img-responsive center certified" alt="TemplateMonster Certified Partner Badge"></a>
+                        <a href="https://certification.templatemonster.com" target="_blank" rel="noopener"><img src="images/certified.png" class="img-responsive center certified" alt="TemplateMonster Certified Partner Badge"></a>
                     </div>
                 </div>
                 <div class="col-md-2 col-sm-4">
