--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                             Web Developer Intern @<a target="_blank" href="https://upnepa.ng" rel="noopener">Upnepa Ng</a><br />
                             Campus Ambassador @<a target="_blank" href="https://ingressive.co" rel="noopener">Ingressive</a>
                             @
-                            <a target="_blank" href="https://favcode54.org ">Favcode54</a> <br />
+                            <a target="_blank" href="https://favcode54.org" rel="noopener">Favcode54</a> <br />
                             Campus Organizer @<a target="_blank " href="https://forloop.africa ">forLoop</a></p>
                         <p>I build and deploy softwares with great focus on stunning user interface, design,
                             optimization and security. 💡</p>
@@ -664,22 +664,25 @@
                         <input type="hidden" name="_subject" value="Message to Bolaji Ayodeji" />
                         <div class="col-md-12 col-sm-12">
                             <label>Full Name</label>
-                            <input type="text" name="name" class="form-control" placeholder="Full Name" id="cf-name"
+                            <input type="text" name="name" class="form-control" placeholder="John Doe" id="cf-name"
                                 required="required">
                         </div>
 
                         <div class="col-md-6 col-sm-6">
-                            <input type="email" name="_replyto" class="form-control" placeholder="Your Email" id="cf-email"
+                            <label>Email Address</label>
+                            <input type="email" name="_replyto" class="form-control" placeholder="john@gmail.com" id="cf-email"
                                 required="required">
                         </div>
 
                         <div class="col-md-6 col-sm-6">
-                            <input type="tel" class="form-control " placeholder="Telephone" id="cf-number" name="cf-number"
+                            <label>Telephone Number</label>
+                            <input type="tel" class="form-control " placeholder="+234 8109445504" id="cf-number" name="cf-number"
                                 required="">
                         </div>
 
                         <div class="col-md-12 col-sm-12">
-                            <textarea class="form-control" rows="6" placeholder="Your message" id="cf-message" name="cf-message"
+                            <label>Your Message</label>
+                            <textarea class="form-control" rows="6" placeholder="Hello Bolaji, How are you doing today? I just visited your website and I must confess, its some great one! I need a similar website for my just launched business, How do I proceed?" id="cf-message" name="cf-message"
                                 required=""></textarea>
                         </div>
 
