--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
 
                         <div class="col-md-12 col-sm-12">
                             <label>Your Message</label>
-                            <textarea class="form-control" rows="6" placeholder="Hello Bolaji, How are you doing today? I just visited your website and I must confess, its some great one! I need a similar website for my just launched business, How do I proceed?" id="cf-message" name="cf-message"
+                            <textarea class="form-control" rows="6" placeholder="Hello Bolaji, How are you doing today?..." id="cf-message" name="cf-message"
                                 required=""></textarea>
                         </div>
 
