fixed link error

--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@
                             <li><a href="#articles" class="smoothScroll">Recent Articles</a></li>
                             <li><a href="#portfolio" class="smoothScroll">Recent Projects</a></li>
                             <li><a href="#contact" class="smoothScroll">Contact</a></li>
-                            <li><a href="https://medium.com/bolajiayodeji" rel="noopener" class="smoothScroll">Blog</a></li>
+                            <li><a href="https://medium.com/@bolajiayodeji" rel="noopener" class="smoothScroll">Blog</a></li>
                         </ul>
                     </div>
                 </div>
