modified image links

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
     <meta name="twitter:site" content="@iambolajiayo" />
     <meta name="twitter:creator" content="@iambolajiayo" />
     <meta name="twitter:description" content="I build and deploy software applications with great focus on stunning interface design, optimization and security.">
-    <meta name="twitter:image" content="images/bolaji.jpg">
-    <meta name="twitter:card" content="images/bolaji.jpg">
+    <meta name="twitter:image" content="https://bolajiayodeji.github.io/https://bolajiayodeji.github.io/images/bolaji.jpg">
+    <meta name="twitter:card" content="https://bolajiayodeji.github.io/images/bolaji.jpg">
     <meta name="description" content="I build and deploy software applications with great focus on stunning interface design, optimization and security.">
     <meta name="keywords" content="Bolaji Ayodeji, Bolaji, Ayodeji, Front-end Developer, Freelancer, Web Developer, Web Designer, Software Developer, Nigerian, Developer, GitHub, OpenSource" />
     <!-- Facebook card -->
     <meta property="fb:admins" content="100018476377896" />
     <meta property="fb:page_id" content="872194893169133" />
     <!--Open Graph-->
-    <meta property="og:image" content="images/bolaji.jpg">
+    <meta property="og:image" content="https://bolajiayodeji.github.io/images/bolaji.jpg">
     <meta property="og:title" content="⚡️️BOLAJI AYODEJI⚡️️" />
     <meta property="og:description" content="I build and deploy software applications with great focus on stunning interface design, optimization and security." />
     <meta name="author" content="BOLAJI AYODEJI">
@@ -220,7 +220,7 @@
 
                 <div class="col-md-4 col-sm-12 ">
                     <div>
-                        <img src="images/bolaji.jpg" class="img-responsive center about-image " alt="Bolaji Ayodeji ">
+                        <img src="https://bolajiayodeji.github.io/images/bolaji.jpg" class="img-responsive center about-image " alt="Bolaji Ayodeji ">
                         <br /><br /><br /><br /><br /><br /><br /><br />
                     </div>
                 </div>
