modified og contents

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
     <meta name="twitter:site" content="@iambolajiayo" />
     <meta name="twitter:creator" content="@iambolajiayo" />
     <meta name="twitter:description" content="I build and deploy software applications with great focus on stunning interface design, optimization and security.">
-    <meta name="twitter:image" content="https://bolajiayodeji.github.io/https://bolajiayodeji.github.io/images/bolaji.jpg">
-    <meta name="twitter:card" content="https://bolajiayodeji.github.io/images/bolaji.jpg">
+    <meta name="twitter:image" content="images/bolaji.jpg">
+    <meta name="twitter:card" content="images/bolaji.jpg">
     <meta name="description" content="I build and deploy software applications with great focus on stunning interface design, optimization and security.">
     <meta name="keywords" content="Bolaji Ayodeji, Bolaji, Ayodeji, Front-end Developer, Freelancer, Web Developer, Web Designer, Software Developer, Nigerian, Developer, GitHub, OpenSource" />
     <!-- Facebook card -->
     <meta property="fb:admins" content="100018476377896" />
     <meta property="fb:page_id" content="872194893169133" />
     <!--Open Graph-->
-    <meta property="og:image" content="https://bolajiayodeji.github.io/images/bolaji.jpg">
+    <meta property="og:image" content="images/bolaji.jpg">
     <meta property="og:title" content="⚡️️BOLAJI AYODEJI⚡️️" />
     <meta property="og:description" content="I build and deploy software applications with great focus on stunning interface design, optimization and security." />
     <meta name="author" content="BOLAJI AYODEJI">
@@ -561,31 +561,15 @@
                                     <li data-target="#fade-quote-carousel" data-slide-to="2" class="active"></li>
                                     <li data-target="#fade-quote-carousel" data-slide-to="3"></li>
                                     <li data-target="#fade-quote-carousel" data-slide-to="4"></li>
-                                    <li data-target="#fade-quote-carousel" data-slide-to="5"></li>
                                 </ol>
                                 <!-- Carousel items -->
                                 <div class="carousel-inner">
                                     <div class="item">
                                         <img class="profile-circle" src="images/testi/seun.jpg" alt="Seun">
                                         <blockquote>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem,
-                                                veritatis nulla eum laudantium totam tempore optio doloremque
-                                                laboriosam quas, quos eaque molestias odio aut eius animi. Impedit
-                                                temporibus nisi
-                                                accusamus.
-                                            </p>
+                                            <p> Bolaji is a great guy, He understands what a business needs to scale and uses the best approaches to develop brilliant digital products. If you want to scale your product via the Digital space, you should contact him immediately.</p>
                                             <h3>Seun Daramola | <span class="testi">Software Developer</span> <a href="https://andela.com"
                                                     target="_blank" rel="noopener">@Andela</a></h3>
-                                        </blockquote>
-                                    </div>
-                                    <div class="item">
-                                        <img class="profile-circle" src="images/testi/johnicks.jpg" alt="Johnicks">
-                                        <blockquote>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem,
-                                                veritatis nulla eum laudantium totam tempore optio doloremque
-                                                laboriosam quas, quos eaque molestias odio aut eius animi.</p>
-                                            <h3>Johnicks | <span class="testi">CEO</span> <a href="https://www.facebook.com/johnicks.studiovilla"
-                                                    target="_blank" rel="noopener">@Johnicks StudioVilla</a></h3>
                                         </blockquote>
                                     </div>
                                     <div class="active item">
@@ -610,8 +594,8 @@
                                                 there lack. You should try him out, He's an exponent Front-end
                                                 Developer
                                             </p>
-                                            <h3>Ibrahim Olamilekan | <span class="testi">Mobile Developer</span> <a
-                                                    href="https://dotimely.com" target="_blank" rel="noopener">@DoTimely</a></h3>
+                                            <h3>Ibrahim Olamilekan | <span class="testi">Software Developer</span> <a
+                                                    href="https://andela.com" target="_blank" rel="noopener">@Andela</a></h3>
                                         </blockquote>
                                     </div>
                                     <div class="item">
