--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="section-btn hvr-bounce-out"><a href="assets/resume.pdf">Download Resume &nbsp;<i class="fa fa-cloud-download"></i></a></li>
+                    <li class="section-btn hvr-bounce-out"><a href="resume.pdf">Download Resume &nbsp;<i class="fa fa-cloud-download"></i></a></li>
                 </ul>
             </div>
 
@@ -553,12 +553,12 @@
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2">
                             <div class="quote"><i class="fa fa-quote-left fa-4x"></i></div>
-                            <div class="carousel slide" id="fade-quote-carousel" data-ride="carousel" data-interval="11000">
+                            <div class="carousel slide" id="fade-quote-carousel" data-ride="carousel" data-interval="10000">
                                 <!-- Carousel indicators -->
                                 <ol class="carousel-indicators">
-                                    <li data-target="#fade-quote-carousel" data-slide-to="0"></li>
+                                    <li data-target="#fade-quote-carousel" data-slide-to="0" class="active"></li>
                                     <li data-target="#fade-quote-carousel" data-slide-to="1"></li>
-                                    <li data-target="#fade-quote-carousel" data-slide-to="2" class="active"></li>
+                                    <li data-target="#fade-quote-carousel" data-slide-to="2"></li>
                                     <li data-target="#fade-quote-carousel" data-slide-to="3"></li>
                                     <li data-target="#fade-quote-carousel" data-slide-to="4"></li>
                                 </ol>
@@ -648,26 +648,27 @@
                         <input type="hidden" name="_subject" value="Message to Bolaji Ayodeji" />
                         <div class="col-md-12 col-sm-12">
                             <label>Full Name</label>
-                            <input type="text" name="name" class="form-control" placeholder="John Doe" id="cf-name"
+                            <input type="text" name="name" class="form-control" placeholder="Your name" id="cf-name"
                                 required="required">
                         </div>
 
                         <div class="col-md-6 col-sm-6">
                             <label>Email Address</label>
-                            <input type="email" name="_replyto" class="form-control" placeholder="john@gmail.com" id="cf-email"
+                            <input type="email" name="_replyto" class="form-control" placeholder="youremail@gmail.com" id="cf-email"
                                 required="required">
                         </div>
 
                         <div class="col-md-6 col-sm-6">
                             <label>Telephone Number</label>
                             <input type="tel" class="form-control " placeholder="+234 8109445504" id="cf-number" name="cf-number"
-                                required="">
+                                required="required">
                         </div>
 
                         <div class="col-md-12 col-sm-12">
                             <label>Your Message</label>
                             <textarea class="form-control" rows="6" placeholder="Hello Bolaji, How are you doing today?..." id="cf-message" name="cf-message"
-                                required=""></textarea>
+                                required="required">
+                            </textarea>
                         </div>
 
                         <div class="col-md-4 col-sm-6">
