--- a/index.html
+++ b/index.html
@@ -123,10 +123,11 @@
                     <li><a href="#services" class="smoothScroll"><i class="ni ni-briefcase-24"></i> Services</a></li>
                     <li><a href="#portfolio" class="smoothScroll"><i class="ni ni-collection"></i> Portfolio</a></li>
                     <li><a href="#contact" class="smoothScroll"><i class="ni ni-satisfied"></i> Hire Me</a></li>
+                    <li><a href="https://bolajiayodeji.com"><i class="ni ni-single-copy-04"></i> Blog</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="section-btn hvr-bounce-out"><a href="resume.pdf">Download Resume &nbsp;<i class="fa fa-cloud-download"></i></a></li>
+                    <li class="section-btn hvr-bounce-out"><a href="/resume.pdf">Download Resume &nbsp;<i class="fa fa-cloud-download"></i></a></li>
                 </ul>
             </div>
 
@@ -183,16 +184,12 @@
                             <h2>Quick Bio</h2>
                             <span class="line-bar">...</span>
                         </div>
-                        <p>Hello there! I'm Bolaji Ayodeji. <br /> OpenSource Advocate 🔥🚀 <br /> Chief Tech Support @<a
-                                target="_blank" href="https://youthsundefined.org" rel="noopener">Youths Undefined</a><br />
-                            Web Developer Intern @<a target="_blank" href="https://upnepa.ng" rel="noopener">Upnepa Ng</a><br />
-                            Campus Ambassador @<a target="_blank" href="https://ingressive.co" rel="noopener">Ingressive</a>
-                            @
-                            <a target="_blank" href="https://favcode54.org" rel="noopener">Favcode54</a> <br />
-                            Campus Organizer @<a target="_blank " href="https://forloop.africa ">forLoop</a></p>
+                        <p>Hello there! I'm Bolaji Ayodeji. </p>
                         <p>I build and deploy softwares with great focus on stunning user interface, design,
                             optimization and security. 💡</p>
-                        <p>I'm passionate about developing and designing brilliant innovative products. 💡</p><br />
+                        <p>I'm passionate about developing and designing brilliant innovative products. 💡</p>
+
+                        <p>I write technical articles on my blog <a href="https://bolajiayodeji.com">www.bolajiayodeji.com</a></p><br />
 
                         <a class="section-btn hvr-icon-forward" href="assets/resume.pdf ">View Resume <i class="fa fa-arrow-right hvr-icon "></i></a>
 
