--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     </script>
 
 
-    <title>⚡️️ BOLAJI AYODEJI ⚡️️</title>
+    <title>Portfolio → BOLAJI AYODEJI</title>
 
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Twitter Card-->
-    <meta name="twitter:title" content="⚡️️BOLAJI AYODEJI⚡️️">
+    <meta name="twitter:title" content="⚡️BOLAJI AYODEJI⚡️️">
     <meta name="twitter:site" content="@iambolajiayo" />
     <meta name="twitter:creator" content="@iambolajiayo" />
     <meta name="twitter:description" content="I build and deploy software applications with great focus on stunning interface design, optimization and security.">
@@ -39,7 +39,7 @@
     <meta property="og:title" content="⚡️️BOLAJI AYODEJI⚡️️" />
     <meta property="og:description" content="I build and deploy software applications with great focus on stunning interface design, optimization and security." />
     <meta name="author" content="BOLAJI AYODEJI">
-    <meta property="og:url" content="https://bolajiayodeji.github.io" />
+    <meta property="og:url" content="https://bolajiayodeji.com/" />
     <meta property="og:site_name" content="⚡️️BOLAJI AYODEJI⚡️️" />
     <meta property="og:type" content="Portfolio Website" />
 
@@ -61,14 +61,14 @@
             "@context": "https://www.schema.org",
             "@type": "Software Developer",
             "name": "BOLAJI AYODEJI (@iambolajiayo)",
-            "url": "https://bolajiayodeji.github.io",
-            "logo": "https://bolajiayodeji.github.io/images/bolaji.jpg",
+            "url": "https://bolajiayodeji.com/",
+            "logo": "https://res.cloudinary.com/iambeejayayo/image/upload/v1547954566/fav-500.png",
             "description": "I build and deploy software applications with great focus on stunning interface design, optimization and security."
         }
     </script>
 
     <!--FAVICON-->
-    <link rel="shortcut icon" href="images/fav.png">
+    <link rel="shortcut icon" href="https://res.cloudinary.com/iambeejayayo/image/upload/v1547954566/fav-500.png">
 
     <!-- STYLESHEET -->
     <link rel="stylesheet" href="css/app.min.css">
@@ -76,11 +76,6 @@
 </head>
 
 <body>
-
-    <!-- PRE LOADER -->
-    <section class="preloader">
-        <img src="images/loader.gif" id="loader">
-    </section>
 
     <!-- Load Facebook SDK for JavaScript -->
     <div id="fb-root"></div>
@@ -118,7 +113,7 @@
             <!-- MENU LINKS -->
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-nav-first">
-                    <li><a href="#home" class="smoothScroll"><i class="ni ni-building"></i> Home</a></li>
+                    <li><a href="https://bolajiayodeji.com" class="smoothScroll"><i class="ni ni-building"></i> Home</a></li>
                     <li><a href="#about" class="smoothScroll"><i class="ni ni-circle-08"></i> About Me</a></li>
                     <li><a href="#services" class="smoothScroll"><i class="ni ni-briefcase-24"></i> Services</a></li>
                     <li><a href="#portfolio" class="smoothScroll"><i class="ni ni-collection"></i> Portfolio</a></li>
@@ -126,9 +121,6 @@
                     <li><a href="https://bolajiayodeji.com"><i class="ni ni-single-copy-04"></i> Blog</a></li>
                 </ul>
 
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="section-btn hvr-bounce-out"><a href="/resume.pdf">Download Resume &nbsp;<i class="fa fa-cloud-download"></i></a></li>
-                </ul>
             </div>
 
         </div>
@@ -217,7 +209,7 @@
 
                 <div class="col-md-4 col-sm-12 ">
                     <div>
-                        <img src="https://bolajiayodeji.github.io/images/bolaji.jpg" class="img-responsive center about-image " alt="Bolaji Ayodeji ">
+                        <img src="https://res.cloudinary.com/iambeejayayo/image/upload/v1547954566/fav-500.png" class="img-responsive center about-image " alt="Bolaji Ayodeji ">
                         <br /><br /><br /><br /><br /><br /><br /><br />
                     </div>
                 </div>
